--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "rfr": "^1.2.3",
     "roarr": "^2.15.4",
     "serialize-error": "^7.0.1",
-    "slonik": "^23.0.3"
+    "slonik": "^23.0.3",
+    "uuid": "^8.3.1"
   },
   "optionalDependencies": {
     "pg-native": "^3.0.0"
