--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@roarr/middleware-serialize-error": "^1.0.0",
     "@slonik/migrator": "^0.7.0",
+    "@slorm/slorm": "^0.0.5",
     "app-root-path": "^3.0.0",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
+    "jwks-rsa": "^1.12.2",
     "moment-timezone": "^0.5.32",
     "pg": "^8.5.1",
     "rfr": "^1.2.3",
