--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-API_TOKEN_MAX_COUNT=5
 AUTH0_AUDIENCE=
 AUTH0_CLIENT_ID=
 AUTH0_DOMAIN=
@@ -12,6 +11,8 @@ DB_PASS=postgres
 DB_NAME=wawab
 DB_MAX_POOL=5
 DB_MIGRATIONS_PATH=src/db/migrations
+MAX_API_TOKENS_PER_USER=5
+MAX_PHONES_PER_USER=5
 NODE_ENV=local
 PORT=3000
 ROARR_LOG=true
