Finishing OTP feature

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,7 @@ DB_MIGRATIONS_PATH=src/db/migrations
 MAX_API_TOKENS_PER_USER=5
 MAX_PHONES_PER_USER=5
 NODE_ENV=local
+OTP_TTL_SECONDS=300
 PORT=3000
 ROARR_LOG=true
+WHATSAPP_TIMEOUT_MS=30000
