--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@adiwajshing/baileys": "^3.4.1",
     "@roarr/middleware-serialize-error": "^1.0.0",
     "@slonik/migrator": "^0.7.0",
-    "@slorm/slorm": "^0.0.7",
+    "@slorm/slorm": "^0.0.8",
     "app-root-path": "^3.0.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
