--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -1,12 +1,23 @@
 version: "3"
 
 services:
+  server:
+    build: .
+    image: wawab-server
+    restart: always
+    ports:
+      - 81:81
+    depends_on:
+      - db
+    env_file:
+      - .env
   db:
     image: postgres:13.1-alpine
+    restart: always
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: wawab
     ports:
-      - 5432:5432
+      - 55432:5432
     volumes:
       - ./.postgres-data:/var/lib/postgresql/data
